# gptables

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  404.html  README.rst  changelog.md  closed_issue_log.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  readthedocs.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml
api/api_reference/: index.html
docs/: api.md  changelog.md  cover.md  gptable.md  index.md  theme.md  wrappers.md
docs/api/: api_reference.md  cover.md  functions.md  gptable.md  gpworkbook.md  notes_sheet.md  table_of_contents.md  theme.md  wrappers.md  write_workbook.md
docs/getting_started/: elements.md  tutorial.md  usage.md
docs/how_to/: additional_formatting.md  custom_theme.md  customisation.md  in_r.md  multiple_sheets.md
docs/info/: changelog.md  contributing.md  contributors.md  examples.md
docs/markdown/: usage.md
docs/reference/: checklist.md  examples.md  glossary.md
docs/source/: changelog.rst  checklist.rst  conf.py  contributers.rst  doc.gptable.rst  doc.wrappers.rst  index.rst  usage.rst
getting_started/elements/: index.html
getting_started/tutorial/: index.html
gptables/: __init__.py  gpt_adding_cover.xlsx
gptables/core/: api.py  cover.py  gptable.py  theme.py  wrappers.py
gptables/examples/: how_to_theme_basic.py  how_to_theme_cover.py  howto_additional_formatting.py  penguins_additional_formatting.py  penguins_cover.py  penguins_data_end_to_end.py  penguins_minimal.py  penguins_minimal_alternate.py  (+8 more)
(+57 files in other folders)
